--- a/index-alt.html
+++ b/index-alt.html
@@ -15,7 +15,7 @@
     <h2>Best Water</h2>
         <p>There are many ways to drink water.  Water from the city faucet that can have benefits like fluoride and other minerals.  But the taste can not be easy to handle.  So, now we can have bottles water which sounds really weird now.  i would not have though to drink bottled water before.  But its better then soda.  What can make you unhealthy.  Plus, can make you dehydrated.  Why not have a bottle of water?  Drinking soda has been decreasing in years now.  Its at an all time low.  People are moving to less calorie healthy alternative to soda.  Who would have though that of drinking water from a bottle.  But the what's the healthy alternative?</p>
 <h1>best water</h1>
-    <h4>Portable Bottled</h4>
+    <h4>Portable Water Bottled</h4>
     <h4>So clear, you can see threw it!</h4>
 <ol>
     <li>clear</li>
