--- a/FlintMichiganWaterProblems.html
+++ b/FlintMichiganWaterProblems.html
@@ -17,22 +17,26 @@
         <a href="citywater.html">city water</a> &nbsp;
         <a href="FlintMichiganWaterProblems.html">flint michigan</a> &nbsp;
     </nav>
-    <figure>
-        <img src="drinking-water.jpg" width="480px" height="320" alt="tropical Island">
-        <figcaption>
-            Water
-        </figcaption>
-    </figure>
+
     <main>
-        <h2>Best Water</h2>
-        <p>Water, what in it?  Check out the next few links and will find out!</p>
+
+        <figure>
+            <img src="drinking-water.jpg" width="480px" height="320" alt="tropical Island">
+            <figcaption>
+                Water
+            </figcaption>
+        </figure>
+        <h2>Flint Michigan</h2>
+        <a href="Unsafe%20Lead%20Levels%20in%20Tap%20Water%20Not%20Limited%20to%20Flint%20-%20The%20New%20York%20Times.pdf">Artical on water troubles in flint michigan</a>
+
         <h1>best water</h1>
-        <h4>Portable Water Bottled</h4>
-        <h4>So clear, you can see threw it!</h4>
+        <h4>Will see the progress</h4>
+        <h4>So clear, you can't see threw it!</h4>
         <ol>
-            <li>clear</li>
-            <li>no city water taste</li>
-            <li>better bottles</li>
+            <li>cloudy</li>
+            <li>iron taste</li>
+            <li>cloudy</li>
+            <li>yuck!</li>
         </ol>
         <br>
         <br>
