--- a/index-alt.html
+++ b/index-alt.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <header>
         <h1>Water</h1>
@@ -18,14 +17,14 @@
         <a href="FlintMichiganWaterProblems.html">flint michigan</a> &nbsp;
     </nav>
     <figure>
-        <img src="drinking-water.jpg" width="480px" height="320" alt="tropical Island">
+        <img src="drinking-water.jpg" width="480" height="320" alt="tropical Island">
         <figcaption>
             Water
         </figcaption>
     </figure>
     <main>
-        <h2>Best Water</h2>
-        <p>Water, what in it? Check out the next few links and will find out!</p>
+        <h2>BEST WATER</h2>
+        <p>Water, whats in it? Check out the next few links and will find out!</p>
         <h1>best water</h1>
         <h4>Portable Water Bottled</h4>
         <h4>So clear, you can see threw it!</h4>
@@ -38,7 +37,7 @@
         <br>
     </main>
     <footer>
-        <small><I><i>Copyright &copy; phil yasger 2016</i> <a href="philip@yasger.com">philip@yasger.com</a></I></small>
+        <small><i>Copyright &copy; phil yasger 2016</i> <i><a href="philip@yasger.com">philip@yasger.com</a></i></small>
     </footer>
 </body>
 
