--- a/citywater.html
+++ b/citywater.html
@@ -12,10 +12,12 @@
         <h1>Water</h1>
     </header>
     <nav>
-            <a href="index-alt.html">home</a> &nbsp;
-        <a href="waterlink.html">Water link</a> &nbsp;
-        <a href="citywater.html">city water</a> &nbsp;
-        <a href="FlintMichiganWaterProblems.html">flint michigan</a> &nbsp;
+        <ul>
+        <li><a href="index-alt.html">home</a></li> &nbsp;
+        <li><a href="waterlink.html">Water link</a></li> &nbsp;
+        <li><a href="citywater.html">city water</a> </li>&nbsp;
+        <li><a href="FlintMichiganWaterProblems.html">flint michigan</a></li> &nbsp;
+        </ul>
     </nav>
     <figure>
         <img src="drinking-water.jpg" width="480px" height="320" alt="tropical Island">
