--- a/index-alt.html
+++ b/index-alt.html
@@ -18,15 +18,17 @@
             <li><a href="FlintMichiganWaterProblems.html">flint michigan</a></li> &nbsp;
         </ul>
     </nav>
+    <main>
     <figure>
         <img src="drinking-water.jpg" width="480" height="320" alt="tropical Island">
         <figcaption>
             Water
         </figcaption>
     </figure>
-    <main>
-        <h2>BEST WATER</h2>
-        <p>Water, whats in it? Check out the next few links and will find out!</p>
+   
+        <h2>Best Water</h2>
+        <p>There are many ways to drink water.  Water from the city faucet that can have benefits like fluoride and <br>other minerals.   
+        <br>But the taste can not be easy to handle. <br> So, now we can have bottles water which sounds really weird now.  <br>i would not have though to drink bottled water before.  But its better then soda. <br> What can make you unhealthy.  Plus, can make you dehydrated.  Why not have a bottle of water?  <br>Drinking soda has been decreasing in years now.  Its at an all time low.  <br>People are moving to less calorie healthy alternative to soda. <br>Who would have though that of drinking water from a bottle.  But the what's the healthy alternative?</p>
         <h1>best water</h1>
         <h4>Portable Water Bottled</h4>
         <h4>So clear, you can see threw it!</h4>
