--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>best water</title>
 <meta charset="utf-8">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="awsome.css">
 </head>
     <h1>Water</h1>
     <nav>
