--- a/waterlink.html
+++ b/waterlink.html
@@ -12,11 +12,13 @@
         <h1>Water</h1>
     </header>
     <nav>
-            <a href="index-alt.html">home</a> &nbsp;
-        <a href="waterlink.html">Water link</a> &nbsp;
-        <a href="citywater.html">city water</a> &nbsp;
-        <a href="FlintMichiganWaterProblems.html">flint michigan</a> &nbsp;
-    </nav>
+        <ul>
+        <li><a href="index-alt.html">home</a></li> &nbsp;
+        <li><a href="waterlink.html">Water link</a></li> &nbsp;
+        <li><a href="citywater.html">city water</a></li> &nbsp;
+        <li><a href="FlintMichiganWaterProblems.html">flint michigan</a></li> &nbsp;
+        </ul>
+            </nav>
     <figure>
         <img src="drinking-water.jpg" width="480px" height="320" alt="tropical Island">
         <figcaption>
@@ -24,16 +26,29 @@
         </figcaption>
     </figure>
     <main>
+        <br>
+        <br>
+        <br>
         <h2>Best Water</h2>
+        <br>
         <p>Water, what in it?  Check out the next few links and will find out!</p>
         <a href="http://www.evian.com/en_us/">evian water</a>
-        <h1>best water</h1>
+        <br>
+        <br>
+        <br>
+        <h1>Clean water</h1>
+         <br>
+        <br>
         <h4>Portable Water Bottled</h4>
+         <br>
+        <br>
         <h4>So clear, you can see threw it!</h4>
+         <br>
+        <br>
         <ol>
             <li>clear</li>
             <li>no city water taste</li>
-            <li>better bottles</li>
+            <li>better then drinking out of cups</li>
         </ol>
         <br>
         <br>
