--- a/FlintMichiganWaterProblems.html
+++ b/FlintMichiganWaterProblems.html
@@ -8,14 +8,17 @@
 </head>
 
 <body>
+    <div="wrapper">
     <header>
         <h1>Water</h1>
     </header>
     <nav>
-            <a href="index-alt.html">home</a> &nbsp;
-        <a href="waterlink.html">Water link</a> &nbsp;
-        <a href="citywater.html">city water</a> &nbsp;
-        <a href="FlintMichiganWaterProblems.html">flint michigan</a> &nbsp;
+        <ul>
+        <li><a href="index-alt.html">home</a></li> &nbsp;
+        <li><a href="waterlink.html">Water link</a></li> &nbsp;
+        <li><a href="citywater.html">city water</a></li> &nbsp;
+        <li><a href="FlintMichiganWaterProblems.html">flint michigan</a></li> &nbsp;
+        </ul>
     </nav>
 
     <main>
@@ -27,10 +30,21 @@
             </figcaption>
         </figure>
         <h2>Flint Michigan</h2>
+                <br>
+        <br>
         <a href="Unsafe%20Lead%20Levels%20in%20Tap%20Water%20Not%20Limited%20to%20Flint%20-%20The%20New%20York%20Times.pdf">Artical on water troubles in flint michigan</a>
-
+        <br>
+        <br>        <br>
+        <br>        <br>
+        <br>
         <h1>best water</h1>
+                <br>
+        <br>
         <h4>Will see the progress</h4>
+                <br>
+        <br>        <br>
+        <br>        <br>
+        <br>
         <h4>So clear, you can't see threw it!</h4>
         <ol>
             <li>cloudy</li>
@@ -44,6 +58,7 @@
     <footer>
         <small><I><i>Copyright &copy; phil yasger 2016</i> <a href="philip@yasger.com">philip@yasger.com</a></I></small>
     </footer>
+        </div>
 </body>
 
 </html>
